# feishu-codex-bridge

./: .gitignore  README.md
feishu-codex-bridge/: .env.example  .gitignore  README.md  pyproject.toml
feishu-codex-bridge/src/feishu_codex_bridge/: __init__.py  __main__.py  app.py  approval.py  codex_client.py  config.py  feishu_client.py  feishu_events.py  feishu_ws.py  security.py  thread_store.py
feishu-codex-bridge/tests/: test_app.py  test_approval.py  test_codex_client.py  test_config.py  test_feishu_client.py  test_feishu_events.py  test_feishu_ws.py  test_security.py  test_thread_store.py
