[project]
name = "feishu-codex-bridge"
version = "0.1.0"
description = "Standalone Feishu/Lark to Codex app bridge."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
feishu = [
  "lark-oapi>=1.4.22",
]
test = [
  "pytest>=8.0.0",
]

[project.scripts]
feishu-codex-bridge = "feishu_codex_bridge.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
